--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,14 @@
 {
     "builds": [
         {
-            "src": "vercel_app/wsgi.py",
+            "src": "SchoolApp/wsgi.py",
             "use": "@vercel/python"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "vercel_app/wsgi.py"
+            "dest": "SchoolApp/wsgi.py"
         }
     ]
 }
