--- a/.gitignore
+++ b/.gitignore
@@ -120,13 +120,14 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
+.env 
+.venv 
+env/ 
+venv/ 
+ENV/ 
+env.bak/ 
 venv.bak/
+myenv/ 
 
 # Spyder project settings
 .spyderproject
